Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-141376

declarative-camera, regression: Switching camera device no longer keeps camera active

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.10.1, 6.11.0 Beta3
    • 6.10.1
    • Multimedia
    • None
    • iOS/tvOS/watchOS, macOS
    • df62da9e0 (dev), ec0713e80 (dev), c5f7b0cae (6.10), deb22b6bd (6.10), 122706bc3 (dev), 15f664d43 (dev), 7477ae5d0 (6.10), bad1eeb87 (6.10)
    • Multimedia Current w28 ..., QtMM w44 - ....

      When using the declarative-camera example, there is a bug when switching camera-devices under certain conditions.

      If your new camera-device does not support the QCameraFormat that is currently being used, then the new camera-device will not be active. The property 'active' will still be set to true, but the camera will not transmit any frames.

      This is different from the existing behavior in QCamera, which was that when you switch device, the format will be reset and the new camera-device will be activated.

        For Gerrit Dashboard: QTBUG-141376
        # Subject Branch Project Status CR V

            npskalerud Nils Petter Skålerud
            npskalerud Nils Petter Skålerud
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: